--- a/.stickler.yml
+++ b/.stickler.yml
@@ -1,10 +1,10 @@
+# add the linters you want stickler to use for this project
 linters:
-  rubocop:
-    display_cop_names: true
-  csslint:
-  stylelint:
   eslint:
-    config: './eslint.config'  
+    # indicate where is the config file for stylelint
+    config: './.eslintrc.json'
+
+# add the files here you want to be ignored by stylelint
 files:
   ignore:
     - 'dist/*'
