--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "'./src/index.js'",
   "scripts": {
     "build": "webpack --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "webpack --progress --watch"
   },
   "repository": "https://github.com/geraldgsh/tic-tac-toe-js/",
@@ -15,7 +15,7 @@
   },
   "homepage": "https://github.com/geraldgsh/tic-tac-toe-js#readme",
   "devDependencies": {
-    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-env": "^7.8.7",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0",
